﻿Version 0.12 - compatible ONLY with A16.3 (b12)

- Fixed typo in js-sleepers command help


Version 0.11 - compatible ONLY with A16.3 (b12)

- Fixed bug that caused a JS exception when using console.log
- Improved js-minibike script to also rotate minibike in direction of player for easy take-off
- Fixed js-minibike script to not work properly when Steam Family Sharing is active
- Added js-variables script to show how to access and iterate basic game objects

Version 0.10 - compatible ONLY with A16.3 (b12)

- Fixed error message when dj-import is called without parameter
- Added function "importAssembly(assemblyName)" to JavaScript engine to allow importing all types of any .Net assembly
- Added global variables "sender" and "player" to scripting engines (lua and js)
- Added example script js-sleepers.js to show import of assemblies and access to objects
- Added background monitoring of added/removed/changed scripts with automatic reloading of script commands without server restart
- Added new js-minibike example script that allows players to teleport their minibike back to them


Version 0.9 - compatible ONLY with A16.3 (b12)

- Updated compatibility to 7DTD A16.3 (b12)
- Replaced dj-power with dj-repair to add other fix tasks in the future.
- Added repair task to restart stopped saving of power and vehicle data (also fixed in A16.3 b7)
- Added repair task to reset locked biome respawn
- Fixed bug that would trigger automatic fixing of power chunks also on unrelated errors
- Fixed error message on import of rotated prefab with /all option
- Fixed occasional error "Could not add newly generated chunk to cache." in dj-regen command


Version 0.8 - compatible ONLY with A16.2 (b7)

- Added command dj-regen to regenerate and redecorate chunks
- Added automatic mode to dj-check-power
- Improved parameter parsing and error messages


Version 0.7 - compatible ONLY with A16.2 (b7)

- Improved dj-import/dj-export command to fully support electricity blocks and wires