@@ -51,6 +51,9 @@ namespace ScriptingMod.Extensions
 
         private static FieldInfo       fi_ChunkAreaBiomeSpawnData_dict;         // ChunkAreaBiomeSpawnData -> private Dictionary<string, ChunkAreaBiomeSpawnData.LK> FP
 
+        private static FieldInfo       fi_EACServer_successDelegateField;       // EACServer ->   private AuthenticationSuccessfulCallbackDelegate authenticationSuccessfulCallbackDelegate_0;
+        private static FieldInfo       fi_EACServer_kickDelegateField;          // EACServer ->   private KickPlayerDelegate kickPlayerDelegate_0;
+
         public static void Init()
         {
             try
@@ -83,6 +86,9 @@ namespace ScriptingMod.Extensions
 
                 var t_ChunkAreaBiomeSpawnData_SpawnData = GetNestedType(typeof(ChunkAreaBiomeSpawnData), typeof(ulong)); // private struct LK, has public ulong PP;
                 fi_ChunkAreaBiomeSpawnData_dict         = GetField(typeof(ChunkAreaBiomeSpawnData), typeof(Dictionary<,>).MakeGenericType(typeof(string), t_ChunkAreaBiomeSpawnData_SpawnData));
+
+                fi_EACServer_successDelegateField       = GetField(typeof(EACServer), typeof(AuthenticationSuccessfulCallbackDelegate));
+                fi_EACServer_kickDelegateField          = GetField(typeof(EACServer), typeof(KickPlayerDelegate));
 
                 Log.Debug("Successfilly established reflection references.");
             }
@@ -236,6 +242,30 @@ namespace ScriptingMod.Extensions
         public static IEnumerable<string> GetEntityGroupNames(this ChunkAreaBiomeSpawnData target)
         {
             return ((IDictionary)fi_ChunkAreaBiomeSpawnData_dict.GetValue(target)).Keys.Cast<string>();
+        }
+
+        #endregion
+
+        #region Reflected extensions to EAC functionality
+
+        public static AuthenticationSuccessfulCallbackDelegate GetSuccessDelegate(this EACServer target)
+        {
+            return (AuthenticationSuccessfulCallbackDelegate)fi_EACServer_successDelegateField.GetValue(target);
+        }
+
+        public static KickPlayerDelegate GetKickDelegate(this EACServer target)
+        {
+            return (KickPlayerDelegate) fi_EACServer_kickDelegateField.GetValue(target);
+        }
+
+        public static void SetSuccessDelegate(this EACServer target, AuthenticationSuccessfulCallbackDelegate successDelegate)
+        {
+            fi_EACServer_successDelegateField.SetValue(target, successDelegate);
+        }
+
+        public static void SetKickDelegate(this EACServer target, KickPlayerDelegate kickDelegate)
+        {
+            fi_EACServer_kickDelegateField.SetValue(target, kickDelegate);
         }
 
         #endregion
