@@ -1,5 +1,6 @@
 ﻿Version 0.12 - compatible ONLY with A16.3 (b12)
 
+- Added dj-eac-whitelist command, which allows to exempt selected players from EAC checks and use modded clients
 - Fixed typo in js-sleepers command help
 
 
@@ -9,6 +10,7 @@ Version 0.11 - compatible ONLY with A16.3 (b12)
 - Improved js-minibike script to also rotate minibike in direction of player for easy take-off
 - Fixed js-minibike script to not work properly when Steam Family Sharing is active
 - Added js-variables script to show how to access and iterate basic game objects
+
 
 Version 0.10 - compatible ONLY with A16.3 (b12)
 
